--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,11 @@ body {
 
 .red-text {
   font-style: italic;
-
-  /* TODO: Make the text colour red instead of blue */
   color: red;
+}
+
+#cool-section {
+    border: 4px solid gray;
+    background-color: yellow;
+    height: 300px;
 }
